# ChatServer

./: CMakeLists.txt  build.sh  dump.rdb
chat_service/: CMakeLists.txt
chat_service/include/: chat_server.h  redis.h  zkClient.h
chat_service/include/proto/: ChatServer.pb.h  FriendService.pb.h  GroupService.pb.h  LogServer.pb.h  OfflineService.pb.h  UserService.pb.h
chat_service/proto/: ChatServer.proto  FriendService.proto  GroupService.proto
chat_service/src/: CMakeLists.txt  chat_server.cpp  main.cpp  redis.cpp  zkClient.cpp
chat_service/src/proto/: FriendService.pb.cc  GroupService.pb.cc  LogServer.pb.cc  OfflineService.pb.cc
client/: CMakeLists.txt
client/include/: client.h  mychat.h
client/include/proto/: FriendService.pb.h  GroupService.pb.h  OfflineService.pb.h  ProxyServer.pb.h
client/proto/: FriendService.proto  GroupService.proto  OfflineService.proto  ProxyServer.proto
client/src/: CMakeLists.txt  client.cpp  main.cpp  mychat.cpp
client/src/proto/: ChatServer.pb.cc  FriendService.pb.cc  GroupService.pb.cc  OfflineService.pb.cc  ProxyServer.pb.cc
friend_service/: CMakeLists.txt
friend_service/include/: FriendServer.h  FriendService.h  User.h  redis.h
friend_service/include/proto/: FriendServer.pb.h
friend_service/proto/: FriendServer.proto  FriendService.proto
friend_service/src/: CMakeLists.txt
friend_service/src/FriendServer/: CMakeLists.txt  FriendServer.cpp  redis.cpp  run.cpp
friend_service/src/FriendService/: CMakeLists.txt  FriendService.cpp  run.cpp  zkMaster.cpp
friend_service/src/proto/: FriendServer.pb.cc
group_service/: CMakeLists.txt
group_service/include/: group_server.h  group_service.h  zkMaster.h
group_service/proto/: GroupServer.proto  GroupService.proto  auto_compile.sh
group_service/src/: CMakeLists.txt
group_service/src/GroupServer/: CMakeLists.txt  group_server.cpp  run.cpp
log_server/include/: LogReadServer.h  LogServer.h
log_server/proto/: LogRead.proto
log_server/src/: CMakeLists.txt
log_server/src/LogReadServer/: CMakeLists.txt  LogReadServer.cpp  run.cpp
log_server/src/LogServer/: CMakeLists.txt  LogServer.cpp  run.cpp
offline_service/include/: offline_server.h  offline_service.h
offline_service/proto/: OfflineServer.proto
offline_service/src/: CMakeLists.txt
offline_service/src/offline_service/: CMakeLists.txt  offline_service.cpp  run.cpp
proxy_server/: CMakeLists.txt
proxy_server/include/: proxy_server.h  proxy_service.h  redis.h
proxy_server/proto/: GroupService.proto  LogServer.proto  OfflineService.proto  UserService.proto
proxy_server/src/: CMakeLists.txt  main.cpp  proxy_server.cpp  proxy_service.cpp
user_service/include/: UserServer.h  UserService.h  zkMaster.h
user_service/proto/: FriendService.proto  UserServer.proto
user_service/src/: CMakeLists.txt
(+46 files in other folders)
